se agregaron equipos

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     <br>
     <p>Premiums</p>
 
-   
+    <label for="tnt"><input id="tnt" type="checkbox" name="personality" value="tnt"> tnt</label>
+    <label for="tnthd"><input id="tnthd" type="checkbox" name="personality" value="tnthd"> tnthd</label>
+    <label for="hbo"><input id="hbo" type="checkbox" name="personality" value="hbo"> hbo</label>
+    <label for="star"><input id="star" type="checkbox" name="personality" value="star"> star</label>
+    <label for="foxsport"><input id="foxsport" type="checkbox" name="personality" value="foxsport"> foxsport</label>
+    <label for="todostar"><input id="todostar" type="checkbox" name="personality" value="todostar"> todostar</label>
+    <label for="hotpack"><input id="hotpack" type="checkbox" name="personality" value="hotpack"> hotpack</label>
+    <label for="exxotico"><input id="exxotico" type="checkbox" name="personality" value="exxotico"> exxotico</label>
+    <label for="full"><input id="full" type="checkbox" name="personality" value="full"> full</label>
+
+    <p>Equipos</p>
+    <label for="3"><input id="3" type="radio" name="indoor-outdoor"> 3</label>
+    <label for="4"><input id="4" type="radio" name="indoor-outdoor"> 4</label>
+    <label for="5"><input id="5" type="radio" name="indoor-outdoor"> 5</label>
+    <label for="6"><input id="6" type="radio" name="indoor-outdoor"> 6</label>
+    <label for="7"><input id="7" type="radio" name="indoor-outdoor"> 7</label>
+    <label for="8"><input id="8" type="radio" name="indoor-outdoor"> 8</label>
+
 </body>
 </html>
