con promociones rvp y rvo

--- a/index.html
+++ b/index.html
@@ -23,35 +23,59 @@
     <h3>Calculadora Integral Chile</h3>
 
     <form>
-    <label for="bronce"><input id="bronce" type="radio" name="pack" value="25940">Pack BronceSd</label>
-    <label for="broncehd"><input id="broncehd" type="radio" name="pack" value="28940">Pack BronceHd</label>
-    <label for="plata"><input id="plata" type="radio" name="pack" value="32450">Pack PlataSd</label>
-    <label for="platahd"><input id="platahd" type="radio" name="pack" value="35100">Pack PlataHd</label>
-    <label for="orosd"><input id="orosd" type="radio" name="pack" value="33450">Pack OroSd</label>
-    <label for="orohd"><input id="orohd" type="radio" name="pack" value="36100">Pack OroHd</label>
-    <label for="oroplus"><input id="oroplus" type="radio" name="pack" value="39000">Pack OroPlus</label>
-    <label for="oroplushd"><input id="oroplushd" type="radio" name="pack" value="41000">Pack OroPlusHd</label>
+    <label for="bronce"><input id="bronce" type="radio" name="pack" value="25940">Pack Bronce</label>
+    <label for="broncehd"><input id="broncehd" type="radio" name="pack" value="28940">Pack Bronce Hd</label>
+    <label for="plata"><input id="plata" type="radio" name="pack" value="32450">Pack Plata</label>
+    <label for="platahd"><input id="platahd" type="radio" name="pack" value="35100">Pack Plata Hd</label>
+    <label for="orosd"><input id="orosd" type="radio" name="pack" value="33450">Pack Oro</label>
+    <label for="orohd"><input id="orohd" type="radio" name="pack" value="36100">Pack Oro Hd</label>
+    <label for="oroplus"><input id="oroplus" type="radio" name="pack" value="39000">Pack Oro Plus</label>
+    <label for="oroplushd"><input id="oroplushd" type="radio" name="pack" value="41000">Pack Oro Plus Hd</label>
     <br>
     <br>
-    <label for="pplatahd"><input id="pplatahd" type="radio" name="plan" value="27580">Plan PlataHd</label>
-    <label for="porohd"><input id="porohd" type="radio" name="plan" value="32450">Plan OroHd</label>
-    <label for="poroplus"><input id="poroplus" type="radio" name="plan" value="37000">Plan OroPlus</label>
-    <label for="oro4k"><input id="oro4k" type="radio" name="plan" value="41000">Plan Oro4K</label>
+    <label for="pplatahd"><input id="pplatahd" type="radio" name="plan" value="27580">Plan Plata Hd</label>
+    <label for="porohd"><input id="porohd" type="radio" name="plan" value="32450">Plan Oro Hd</label>
+    <label for="poroplus"><input id="poroplus" type="radio" name="plan" value="37000">Plan Oro Plus</label>
+    <label for="oro4k"><input id="oro4k" type="radio" name="plan" value="41000">Plan Oro 4K</label>
     <label for="broncelite"><input id="broncelite" type="radio" name="plan" value="22000">Plan bronce lite</label>
     <br>
     
     <p>Premiums</p>
 
-    <label for="tnt"><input id="tnt" type="checkbox" name="premium" value="8730"> tnt</label>
-    <label for="tnthd"><input id="tnthd" type="checkbox" name="premium" value="2570"> tnthd</label>
-    <label for="hbo"><input id="hbo" type="checkbox" name="premium" value="7920"> hbo</label>
-    <label for="star"><input id="star" type="checkbox" name="premium" value="7920r"> star</label>
-    <label for="foxsport"><input id="foxsport" type="checkbox" name="premium" value="9970"> foxsport</label>
-    <label for="todostar"><input id="todostar" type="checkbox" name="premium" value="13500"> todostar</label>
-    <label for="hotpack"><input id="hotpack" type="checkbox" name="premium" value="8315"> hotpack</label>
-    <label for="exxotico"><input id="exxotico" type="checkbox" name="premium" value="8315"> exxotico</label>
-    <label for="full"><input id="full" type="checkbox" name="premium" value="1540"> full service</label>
-
+    <label for="tnt"><input id="tnt" type="checkbox" name="premium1" value="8730"> TNT $8730</label>
+    <label for="rvp1"><input id="rvp1" type="checkbox" name="rvp1" value="-4365"> TNT 50%</label><br>
+    <label for="tntv"><input id="tntv" type="checkbox" name="premium2" value="7920"> TNT $7920</label>
+    <label for="rvp2"><input id="rvp2" type="checkbox" name="rvp2" value="-3960"> TNT 50%</label> <br>   
+    <label for="tnthd"><input id="tnthd" type="checkbox" name="premium3" value="11300"> TNT HD $11300</label>
+    <label for="rvp3"><input id="rvp3" type="checkbox" name="rvp3" value="-5650"> TNT HD 50%</label> <br>
+    <label for="hbo"><input id="hbo" type="checkbox" name="premium4" value="7920"> HBO</label>
+    <label for="rvp4"><input id="rvp4" type="checkbox" name="rvp4" value="-3960"> HBO 50%</label> <br>
+    <label for="star"><input id="star" type="checkbox" name="premium5" value="7920r"> STAR</label> <br>
+    <label for="combo1"><input id="combo1" type="checkbox" name="premium6" value="7920"> Combo $7960</label> <br>
+    <label for="combo2"><input id="combo2" type="checkbox" name="premium7" value="8500"> Combo $8500</label> <br>
+    <label for="foxsport"><input id="foxsport" type="checkbox" name="premium8" value="9970"> Fox Sport</label>
+    <label for="rvp5"><input id="rvp5" type="checkbox" name="rvp5" value="-4985"> Fox Sport 50%</label> <br>
+    <label for="todostar"><input id="todostar" type="checkbox" name="premium9" value="13500"> Todo Star</label>
+    <label for="rvp6"><input id="rvp6" type="checkbox" name="rvp6" value="-6750"> Todo Star 50%</label> <br>
+    <label for="hotpack"><input id="hotpack" type="checkbox" name="premium10" value="8315"> Hot Pack</label>
+    <label for="rvp7"><input id="rvp7" type="checkbox" name="rvp7" value="-4365"> Hot Pack 50%</label> <br>
+    <label for="exxotico"><input id="exxotico" type="checkbox" name="premium11" value="8315"> Exxotico</label>
+    <label for="rvp8"><input id="rvp8" type="checkbox" name="rvp8" value="-4365"> Exxotico 50%</label> <br>
+    <label for="full"><input id="full" type="checkbox" name="premium12" value="1540"> Full Service</label>
+    
+    <p>RVO</p>
+    <label for="rvo1"><input id="rvo1" type="radio" name="rvo" value="-2000"> $2000</label>
+    <label for="rvo2"><input id="rvo2" type="radio" name="rvo" value="-4000"> $4000</label>
+    <label for="rvo3"><input id="rvo3" type="radio" name="rvo" value="-5000"> $5000</label>
+    <label for="rvo4"><input id="rvo4" type="radio" name="rvo" value="-6000"> $6000</label>
+    <label for="rvo5"><input id="rvo5" type="radio" name="rvo" value="-7000"> $7000</label>
+    <label for="rvo6"><input id="rvo6" type="radio" name="rvo" value="-8000"> $8000</label>
+    <label for="rvo7"><input id="rvo7" type="radio" name="rvo" value="-9000"> $9000</label>
+    <label for="rvo8"><input id="rvo8" type="radio" name="rvo" value="-10000"> $10000</label>
+    <label for="rvo9"><input id="rvo9" type="radio" name="rvo" value="-11000"> $11000</label>
+    <label for="rvo10"><input id="rvo10" type="radio" name="rvo" value="-12000"> $12000</label>
+    <label for="rvo11"><input id="rvo11" type="radio" name="rvo" value="-16000"> $16000</label>
+    <br>
     <p>Equipos</p>
     <label for="3"><input id="3" type="radio" name="equipos" value="3910"> 3</label>
     <label for="4"><input id="4" type="radio" name="equipos" value="7820"> 4</label>
@@ -59,8 +83,11 @@
     <label for="6"><input id="6" type="radio" name="equipos" value="15640"> 6</label>
     <label for="7"><input id="7" type="radio" name="equipos" value="19550"> 7</label>
     <label for="8"><input id="8" type="radio" name="equipos" value="23460"> 8</label>
-    <button>Obtener TOTAL</button>
+    <br>
+    <br>
+    <button>Total Boleta</button>
     </form>
+    <br>
     <div id="resultado"></div>
     <br>
     <br>
@@ -83,10 +110,30 @@
           // convertir los valores a String, o colocar un 0 si no elegieron algo
           const pack = parseInt(formData.get('pack') || '0', 10);
           const plan = parseInt(formData.get('plan') || '0', 10);
-          const premium = parseInt(formData.get('premium') || '0', 10);
+          const rvo = parseInt(formData.get('rvo') || '0', 10);
+          const premium1 = parseInt(formData.get('premium1') || '0', 10);
+          const premium2 = parseInt(formData.get('premium2') || '0', 10);
+          const premium3 = parseInt(formData.get('premium3') || '0', 10);
+          const premium4 = parseInt(formData.get('premium4') || '0', 10);
+          const premium5 = parseInt(formData.get('premium5') || '0', 10);
+          const premium6 = parseInt(formData.get('premium6') || '0', 10);
+          const premium7 = parseInt(formData.get('premium7') || '0', 10);
+          const premium8 = parseInt(formData.get('premium8') || '0', 10);
+          const premium9 = parseInt(formData.get('premium9') || '0', 10);
+          const premium10 = parseInt(formData.get('premium10') || '0', 10);
+          const rvp1 = parseInt(formData.get('rvp1') || '0', 10);
+          const rvp2 = parseInt(formData.get('rvp2') || '0', 10);
+          const rvp3 = parseInt(formData.get('rvp3') || '0', 10);
+          const rvp4 = parseInt(formData.get('rvp4') || '0', 10);
+          const rvp5 = parseInt(formData.get('rvp5') || '0', 10);
+          const rvp6 = parseInt(formData.get('rvp6') || '0', 10);
+          const rvp7 = parseInt(formData.get('rvp7') || '0', 10);
+          const rvp8 = parseInt(formData.get('rvp8') || '0', 10);
           const equipos = parseInt(formData.get('equipos') || '0', 10);
   
-          const result = pack + plan + premium + equipos;
+          const result = pack + plan + rvo + premium1 + premium2 + premium3 + premium4 +
+           premium5 + premium6 + premium7 + premium8 + premium9 + premium10 + rvp1 + 
+           rvp2 + rvp3 + rvp4 + rvp5 + rvp6 + rvp7 + rvp8 + equipos;
 
          // alert("la suma es:" + result);
          // Window.print(result);
