--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
         <h4>Paquetes Premium</h4>
         <hr>
         <label for="tnt"><input id="tnt" type="checkbox" name="premium1" value="8730"> Tnt $8.730--------></label>
-        <label for="rvp1"><input id="rvp1" type="checkbox" name="rvp1" value="-4365"> Tnt 50%</label><br>
+        <label for="rvp1"><input id="rvp1" type="checkbox" name="rvp1" value="-4365"> 50%</label><br>
         <label for="tntv"><input id="tntv" type="checkbox" name="premium2" value="7920"> Tnt $7.920--------></label>
-        <label for="rvp2"><input id="rvp2" type="checkbox" name="rvp2" value="-3960"> Tnt 50%</label> <br>   
+        <label for="rvp2"><input id="rvp2" type="checkbox" name="rvp2" value="-3960"> 50%</label> <br>   
         <label for="tnthd"><input id="tnthd" type="checkbox" name="premium3" value="11300"> Tnt Hd $11.300--></label>
-        <label for="rvp3"><input id="rvp3" type="checkbox" name="rvp3" value="-5650"> Tnt Hd 50%</label> <br>
+        <label for="rvp3"><input id="rvp3" type="checkbox" name="rvp3" value="-5650"> 50%</label> <br>
         <label for="hbo"><input id="hbo" type="checkbox" name="premium4" value="7920"> Hbo----------------></label>
-        <label for="rvp4"><input id="rvp4" type="checkbox" name="rvp4" value="-3960"> Hbo 50%</label> <br>
+        <label for="rvp4"><input id="rvp4" type="checkbox" name="rvp4" value="-3960"> 50%</label> <br>
         <label for="star"><input id="star" type="checkbox" name="premium5" value="7920"> Star Premium</label> <br>
         <label for="combo1"><input id="combo1" type="checkbox" name="premium6" value="7920"> Combo $7.960</label> <br>
         <label for="combo2"><input id="combo2" type="checkbox" name="premium7" value="8500"> Combo $8.500</label> <br>
         <label for="foxsport"><input id="foxsport" type="checkbox" name="premium8" value="9970"> Fox Sport----------></label>
-        <label for="rvp5"><input id="rvp5" type="checkbox" name="rvp5" value="-4985"> Fox Sport 50%</label> <br>
+        <label for="rvp5"><input id="rvp5" type="checkbox" name="rvp5" value="-4985"> 50%</label> <br>
         <label for="todostar"><input id="todostar" type="checkbox" name="premium9" value="13360"> Todo Star----------></label>
-        <label for="rvp6"><input id="rvp6" type="checkbox" name="rvp6" value="-6680"> Todo Star 50%</label> <br>
+        <label for="rvp6"><input id="rvp6" type="checkbox" name="rvp6" value="-6680"> 50%</label> <br>
         <label for="hotpack"><input id="hotpack" type="checkbox" name="premium10" value="8630"> Hot Pack-----------></label>
-        <label for="rvp7"><input id="rvp7" type="checkbox" name="rvp7" value="-4315"> Hot Pack 50%</label> <br>
+        <label for="rvp7"><input id="rvp7" type="checkbox" name="rvp7" value="-4315"> 50%</label> <br>
         <label for="exxotico"><input id="exxotico" type="checkbox" name="premium11" value="8630"> Exxotico-----------></label>
-        <label for="rvp8"><input id="rvp8" type="checkbox" name="rvp8" value="-4315"> Exxotico 50%</label> <br>
+        <label for="rvp8"><input id="rvp8" type="checkbox" name="rvp8" value="-4315"> 50%</label> <br>
         <label for="full"><input id="full" type="checkbox" name="premium12" value="1540"> Full Service</label>
         </div> 
     <div class="c5">
