cambio de color al seleccionar option

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <div class="c1">
     <h4>Clientes Nuevos</h4>
     <hr>
-    <label for="pplatahd"><input id="pplatahd" type="radio" name="plan" value="27580">Plan Plata Hd</label> <br>
-    <label for="porohd"><input id="porohd" type="radio" name="plan" value="32450">Plan Oro Hd</label> <br>
+    
+    <input id="pplatahd" type="radio" name="plan" value="27580"><label for="pplatahd">Plan Plata Hd</label> <br>
+    <input id="porohd" type="radio" name="plan" value="32450"><label for="porohd">Plan Oro Hd</label> <br>
     <label for="poroplus"><input id="poroplus" type="radio" name="plan" value="37000">Plan Oro Plus Hd</label> <br>
     <label for="oro4k"><input id="oro4k" type="radio" name="plan" value="41230">Plan Oro 4K</label> <br>
     <label for="broncelite"><input id="broncelite" type="radio" name="plan" value="20610">Plan Bronce Lite</label>
