--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="calculadora.ico">
     
 
@@ -60,25 +60,25 @@
       <div class="c4">
         <h4>Paquetes Premium</h4>
         <hr>
-        <input id="tnt" type="checkbox" name="premium1" value="8730"><label for="tnt">Tnt $8.730--------></label>
-        <input id="rvp1" type="checkbox" name="rvp1" value="-4365"><label for="rvp1">50%</label><br>
-        <input id="tntv" type="checkbox" name="premium2" value="7920"><label for="tntv">Tnt $7.920--------></label>
-        <input id="rvp2" type="checkbox" name="rvp2" value="-3960"><label for="rvp2">50%</label> <br>   
+        <input id="tnt" type="checkbox" name="premium1" value="8730"><label class="rvpValor" for="tnt">Tnt $8.730---------></label>
+        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4365"><label class="rvpEspacio" for="rvp1">50%</label><br>
+        <input id="tntv" type="checkbox" name="premium2" value="7920"><label for="tntv">Tnt $7.920---------></label>
+        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-3960"><label class="rvpEspacio" for="rvp2">50%</label> <br>   
         <input id="tnthd" type="checkbox" name="premium3" value="11300"><label for="tnthd">Tnt HD $11.300--></label>
-        <input id="rvp3" type="checkbox" name="rvp3" value="-5650"><label for="rvp3">50%</label> <br>
-        <input id="hbo" type="checkbox" name="premium4" value="7920"><label for="hbo">Hbo----------------></label>
-        <input id="rvp4" type="checkbox" name="rvp4" value="-3960"><label for="rvp4">50%</label> <br>
+        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-5650"><label class="rvpEspacio" for="rvp3">50%</label> <br>
+        <input id="hbo" type="checkbox" name="premium4" value="7920"><label for="hbo">Hbo-----------------></label>
+        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-3960"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="star" type="checkbox" name="premium5" value="7920"><label for="star">Star Premium</label> <br>
         <input id="combo1" type="checkbox" name="premium6" value="7920"><label for="combo1">Combo $7.960</label> <br>
         <input id="combo2" type="checkbox" name="premium7" value="8500"><label for="combo2">Combo $8.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium8" value="9970"><label for="foxsport">Fox Sport----------></label>
-        <input id="rvp5" type="checkbox" name="rvp5" value="-4985"><label for="rvp5">50%</label> <br>
+        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4985"><label class="rvpEspacio" for="rvp5">50%</label> <br>
         <input id="todostar" type="checkbox" name="premium9" value="13360"><label for="todostar">Todo Star----------></label>
-        <input id="rvp6" type="checkbox" name="rvp6" value="-6680"><label for="rvp6">50%</label> <br>
+        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-6680"><label class="rvpEspacio" for="rvp6">50%</label> <br>
         <input id="hotpack" type="checkbox" name="premium10" value="8630"><label for="hotpack">Hot Pack-----------></label>
-        <input id="rvp7" type="checkbox" name="rvp7" value="-4315"><label for="rvp7">50%</label> <br>
+        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
         <input id="exxotico" type="checkbox" name="premium11" value="8630"><label for="exxotico">Exxotico-----------></label>
-        <input id="rvp8" type="checkbox" name="rvp8" value="-4315"><label for="rvp8">50%</label> <br>
+        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4315"><label class="rvpEspacio" for="rvp8">50%</label> <br>
         <input id="full" type="checkbox" name="premium12" value="1540"><label for="full">Full Service</label>
         </div> 
     <div class="c5">
