resultado fijo derecha arriba en celular

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <input id="rvo12" type="checkbox" name="rvoEquipo" value="-1955"><label for="rvo12">50% deco Adicional</label>
     </div>
     <div class="c6">
-    <div id="resultado"></div>
-    <button>Borrar</button>
+      <div class="flotante" id="resultado"></div>
+      <button class="flotanteButton">Borrar</button>
     </div>
     </form>
     <br>
