se adicional universal y descuento full service

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <input id="hbo" type="checkbox" name="premium4" value="7920"><label for="hbo">Hbo-----------------></label>
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-3960"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="star" type="checkbox" name="premium5" value="7920"><label for="star">Star Premium</label> <br>
+        <input id="universal" type="checkbox" name="premium13" value="7920"><label for="universal">Universal</label> <br>
         <input id="combo1" type="checkbox" name="premium6" value="7920"><label for="combo1">Combo $7.960</label> <br>
         <input id="combo2" type="checkbox" name="premium7" value="8500"><label for="combo2">Combo $8.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium8" value="9970"><label for="foxsport">Fox Sport----------></label>
@@ -67,7 +68,8 @@
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
         <input id="exxotico" type="checkbox" name="premium11" value="8630"><label for="exxotico">Exxotico-----------></label>
         <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4315"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="full" type="checkbox" name="premium12" value="1540"><label for="full">Full Service</label>
+        <input id="full" type="checkbox" name="premium12" value="1540"><label for="full">Full Service-------></label>
+        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-770"><label class="rvpEspacio" for="rvp9">50%</label> <br>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
@@ -95,6 +97,11 @@
       <br>
       <div class="flotante" id="resultado"></div>
       <button class="flotanteButton">Borrar</button>
+      <br>
+      <br>
+      <br>
+      <br>
+     <!--  <a id="modo" href="https://fcifuentes2.github.io/">Black</a> -->
     </div>
     </form>
     <br>
