boton modo oscuro

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <br>
       <br>
       <br>
-     <!--  <a id="modo" href="https://fcifuentes2.github.io/">Black</a> -->
+      <a id="modo" href="https://fcifuentes2.github.io/">Black</a>
     </div>
     </form>
     <br>
