--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
         <input id="hbo" type="checkbox" name="premium4" value="7920"><label for="hbo">Hbo-----------------></label>
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-3960"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="star" type="checkbox" name="premium5" value="7920"><label for="star">Star Premium</label> <br>
-        <input id="universal" type="checkbox" name="premium13" value="7920"><label for="universal">Universal</label> <br>
-        <input id="combo1" type="checkbox" name="premium6" value="7920"><label for="combo1">Combo $7.960</label> <br>
-        <input id="combo2" type="checkbox" name="premium7" value="8500"><label for="combo2">Combo $8.500</label> <br>
-        <input id="foxsport" type="checkbox" name="premium8" value="9970"><label for="foxsport">Fox Sport----------></label>
+        <input id="universal" type="checkbox" name="premium6" value="7920"><label for="universal">Universal</label> <br>
+        <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br>
+        <input id="combo2" type="checkbox" name="premium8" value="8500"><label for="combo2">Combo $8.500</label> <br>
+        <input id="star+" type="checkbox" name="premium9" value="6500"><label for="star+">Star+ $6.500</label> <br>
+        <input id="foxsport" type="checkbox" name="premium10" value="9970"><label for="foxsport">Fox Sport----------></label>
         <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4985"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="todostar" type="checkbox" name="premium9" value="13360"><label for="todostar">Todo Star----------></label>
+        <input id="todostar" type="checkbox" name="premium11" value="13360"><label for="todostar">Todo Star----------></label>
         <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-6680"><label class="rvpEspacio" for="rvp6">50%</label> <br>
-        <input id="hotpack" type="checkbox" name="premium10" value="8630"><label for="hotpack">Hot Pack-----------></label>
+        <input id="hotpack" type="checkbox" name="premium12" value="8630"><label for="hotpack">Hot Pack-----------></label>
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
-        <input id="exxotico" type="checkbox" name="premium11" value="8630"><label for="exxotico">Exxotico-----------></label>
+        <input id="exxotico" type="checkbox" name="premium13" value="8630"><label for="exxotico">Exxotico-----------></label>
         <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4315"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="full" type="checkbox" name="premium12" value="1540"><label for="full">Full Service-------></label>
+        <input id="full" type="checkbox" name="premium14" value="1540"><label for="full">Full Service-------></label>
         <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-770"><label class="rvpEspacio" for="rvp9">50%</label> <br>
         </div> 
     <div class="c5">
@@ -103,6 +104,10 @@
       <br>
       <br>
       <a id="modo" href="https://fcifuentes2.github.io/">Black</a>
+      <br>
+      <br>
+      <br>
+      <p id="sugerencia">Sugerencias, errores escribeme x workPlace: Fernando Cifuentes Obonaga </p>
     </div>
     </form>
     <br>
