--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input id="orosd" type="radio" name="plan" value="37730"><label for="orosd">Pack Oro</label> <br>
     <input id="orohd" type="radio" name="plan" value="40380"><label for="orohd">Pack Oro HD</label> <br>
     <input id="oroplus" type="radio" name="plan" value="41210"><label for="oroplus">Pack Oro Plus</label> <br>
-    <input id="oroplushd" type="radio" name="plan" value="44400"><label for="oroplushd">Plan Oro Plus Hd</label>
+    <input id="oroplushd" type="radio" name="plan" value="44400"><label for="oroplushd">Plack Oro Plus Hd</label>
     </div>  
    
     <div class="c3">
@@ -59,17 +59,18 @@
         <input id="star" type="checkbox" name="premium5" value="7920"><label for="star">Star Premium</label> <br>
         <input id="universal" type="checkbox" name="premium6" value="7920"><label for="universal">Universal</label> <br>
         <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br>
-        <input id="combo2" type="checkbox" name="premium8" value="8500"><label for="combo2">Combo $8.500</label> <br>
-        <input id="star+" type="checkbox" name="premium9" value="6500"><label for="star+">Star+ $6.500</label> <br>
-        <input id="foxsport" type="checkbox" name="premium10" value="9970"><label for="foxsport">Fox Sport----------></label>
+        <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label> <br>
+        <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
+        <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
+        <input id="foxsport" type="checkbox" name="premium11" value="9970"><label for="foxsport">Fox Sport----------></label>
         <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4985"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="todostar" type="checkbox" name="premium11" value="13360"><label for="todostar">Todo Star----------></label>
-        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-6680"><label class="rvpEspacio" for="rvp6">50%</label> <br>
-        <input id="hotpack" type="checkbox" name="premium12" value="8630"><label for="hotpack">Hot Pack-----------></label>
+        <input id="todostar" type="checkbox" name="premium12" value="13360"><label for="todostar">Todo Star----------></label><br>
+        <!-- <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-6680"><label class="rvpEspacio" for="rvp6">50%</label> <br> -->
+        <input id="hotpack" type="checkbox" name="premium13" value="8630"><label for="hotpack">Hot Pack-----------></label>
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
-        <input id="exxotico" type="checkbox" name="premium13" value="8630"><label for="exxotico">Exxotico-----------></label>
+        <input id="exxotico" type="checkbox" name="premium14" value="8630"><label for="exxotico">Exxotico-----------></label>
         <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4315"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="full" type="checkbox" name="premium14" value="1540"><label for="full">Full Service-------></label>
+        <input id="full" type="checkbox" name="premium15" value="1540"><label for="full">Full Service-------></label>
         <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-770"><label class="rvpEspacio" for="rvp9">50%</label> <br>
         </div> 
     <div class="c5">
