--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium11" value="9970"><label for="foxsport">Fox Sport----------></label>
         <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4985"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="todostar" type="checkbox" name="premium12" value="13360"><label for="todostar">Todo Star----------></label><br>
-        <!-- <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-6680"><label class="rvpEspacio" for="rvp6">50%</label> <br> -->
+        <input id="todostar" type="checkbox" name="premium12" value="13360"><label for="todostar">Todo Star</label><br>
         <input id="hotpack" type="checkbox" name="premium13" value="8630"><label for="hotpack">Hot Pack-----------></label>
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
         <input id="exxotico" type="checkbox" name="premium14" value="8630"><label for="exxotico">Exxotico-----------></label>
