borra starpremium 50% universal actualiza deco adicional 24990

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-5650"><label class="rvpEspacio" for="rvp3">50%</label> <br>
         <input id="hbo" type="checkbox" name="premium4" value="7920"><label for="hbo">Hbo-----------------></label>
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-3960"><label class="rvpEspacio" for="rvp4">50%</label> <br>
-        <input id="star" type="checkbox" name="premium5" value="7920"><label for="star">Star Premium</label> <br>
-        <input id="universal" type="checkbox" name="premium6" value="7920"><label for="universal">Universal</label> <br>
+        <input id="universal" type="checkbox" name="premium6" value="7920"><label for="universal">Universal----------></label> 
+        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-3960"><label class="rvpEspacio" for="rvp5">50%</label> <br>
         <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br>
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label> <br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium11" value="9970"><label for="foxsport">Fox Sport----------></label>
-        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4985"><label class="rvpEspacio" for="rvp5">50%</label> <br>
+        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4985"><label class="rvpEspacio" for="rvp6">50%</label> <br>
         <input id="todostar" type="checkbox" name="premium12" value="13360"><label for="todostar">Todo Star</label><br>
         <input id="hotpack" type="checkbox" name="premium13" value="8630"><label for="hotpack">Hot Pack-----------></label>
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4315"><label class="rvpEspacio" for="rvp7">50%</label> <br>
@@ -92,9 +92,9 @@
     <div class="c6">
       <h4 class="extras">Extras</h4>
       <hr class="extras">
-      <input id="recargo" type="checkbox" name="recargo" value="1600"><label class="rvpValor" for="recargo">Recargo x mora $1600</label><br>
-      <input id="tntflex" type="checkbox" name="tntflex" value="3380"><label class="rvpValor" for="tntflex">Tnt flexible $3380</label><br>
-      <input id="deco" type="checkbox" name="deco" value="14990"><label class="rvpValor" for="deco">Deco Adicional $14990</label>
+      <input id="recargo" type="checkbox" name="recargo" value="1600"><label class="rvpValor" for="recargo">Recargo x mora $1.600</label><br>
+      <input id="tntflex" type="checkbox" name="tntflex" value="3380"><label class="rvpValor" for="tntflex">Tnt flexible $3.380</label><br>
+      <input id="deco" type="checkbox" name="deco" value="24990"><label class="rvpValor" for="deco">Deco Adicional $24.990</label>
       <br>
       <br>
       <div class="flotante" id="resultado"></div>
