--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="script.js"></script>
     <meta property="og:title" content="Calculadora Integral">
     <meta property="og:image" content="https://fcifuentes2.github.io/meta.jpg">
-    <meta property="og:url" content="https://fcifuentes2.github.io/">
+    <meta property="og:url" content="https://fcifuentes2.github.io">
     <meta property="og:description" content="Calculadora que aguiliza tus consultas de facturacion" />
     
 </head>
