--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head prefix="og: https://ogp.me/ns#">
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,10 @@
     <link rel="icon" href="calculadora.ico">
     <script type="text/javascript" src="script.js"></script>
     <meta property="og:title" content="Calculadora Integral">
-    <meta property="og:image" content="https://fcifuentes2.github.io/calculadoraIntegralChile/meta.jpg">
-    <meta property="og:url" content="https://fcifuentes2.github.io/calculadoraIntegralChile/">
+    <meta property="og:image:width" content="500">
+    <meta property="og:image:height" content="500">
+    <meta property="og:image" content="https://fcifuentes2.github.io/meta.jpg">
+    <meta property="og:url" content="https://fcifuentes2.github.io">
     <meta property="og:description" content="Calculadora que aguiliza tus consultas de facturacion" />
     
 </head>
