se retira combo 7920

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-3960"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="universal" type="checkbox" name="premium6" value="7920"><label for="universal">Universal----------></label> 
         <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-3960"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br>
+        <!-- <input id="combo1" type="checkbox" name="premium7" value="7920"><label for="combo1">Combo $7.960</label> <br> -->
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label> <br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
