--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <br>
       <br>
       <br>
-      <p id="sugerencia">Sugerencias, errores escribeme x workPlace: <a href="https://directv.workplace.com/chat/t/100001212809222"> Fernando Cifuentes Obonaga</a> </p>
+      <p id="sugerencia">Sugerencias, errores escribeme x workPlace: <a href="https://directv.workplace.com/chat/t/100001212809222" target="_blank"> Fernando Cifuentes Obonaga</a> </p>
       
     </div>
     </form>
