--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://fcifuentes2.github.io/meta.jpg">
     <meta property="og:url" content="https://fcifuentes2.github.io">
     <meta property="og:description" content="Calculadora que aguiliza tus consultas de facturacion" />
-    <meta property="og:type" content="article" />
+    <!-- <meta property="og:type" content="article" /> -->
     
  </head>
 <body>
